compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__wide_float_div.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\nfn go() {\n  111111111111111111111111111111. /. 22222222222222222222222222222222222.\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  111111111111111111111111111111. /. 22222222222222222222222222222222222.
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Float_t {
  return gleam_P.DivideFloat(
    111111111111111111111111111111.,
    22222222222222222222222222222222222.,
  )
}
